--- a/packages/nouns-webapp/src/components/AuctionActivityNounTitle/AuctionActivityNounTitle.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivityNounTitle/AuctionActivityNounTitle.module.css
@@ -3,5 +3,4 @@
   font-family: 'Londrina Solid';
   font-weight: bold;
   font-size: 3rem;
-  margin-bottom: 1rem;
 }
